@@ -18,6 +18,8 @@ Changes in administration of the server
       xmpp streams or disabling tls now also affect subdomains of the
       configured host. It is now also possible to require s2s connections
       to some or all other hosts to be encrypted.
+    * Jabberd14 now supports SASL EXTERNAL authentication using TLS
+      certificates on s2s links.
 
 Changes in features visible to the user
     * Support for Flexible Offline Message Retrieval (JEP-0013)
